Fix link list layout on mobile

--- a/index.css
+++ b/index.css
@@ -28,9 +28,15 @@ h1 {
 }
 ul {
   display: flex;
+  flex-direction: column;
   gap: 1.5rem;
   padding-left: 0;
   list-style-type: none;
+}
+@media (min-width: 48rem) {
+  ul {
+    flex-direction: row;
+  } 
 }
 li {
   font-weight: 400;
